[gd_scene load_steps=10 format=3 uid="uid://demoo5rgv6ufr"]

[ext_resource type="Theme" path="res://common/gothicfont.theme" id="1"]
[ext_resource type="Texture2D" uid="uid://bghyqphqvr74w" path="res://common/right.png" id="2"]
[ext_resource type="Texture2D" uid="uid://doyjiqtul4pcq" path="res://common/information.png" id="3"]
[ext_resource type="Texture2D" uid="uid://bpefqoakm6jbj" path="res://common/gear.png" id="4"]
[ext_resource type="Script" path="res://scenes/MainMenu.gd" id="5"]
[ext_resource type="FontFile" uid="uid://pxjg5vggvcr6" path="res://common/DungeonFont.ttf" id="7"]
[ext_resource type="Texture2D" uid="uid://ccqjm1q3dcry6" path="res://common/return.png" id="8"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("7")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="Theme" id="2"]
default_font = SubResource("1")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("5")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.145098, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1")
text = "Tower of
Blood"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SettingsButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
texture_normal = ExtResource("4")

[node name="InfoButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3")

[node name="PlayButton" type="TextureButton" parent="CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2")

[node name="Credits" type="CanvasLayer" parent="."]
visible = false

[node name="Background" type="ColorRect" parent="Credits"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.145098, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="Credits"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -292.0
offset_top = 30.0
offset_right = 292.0
offset_bottom = 357.0

[node name="VBoxContainer" type="VBoxContainer" parent="Credits/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("2")
text = "A game by Hugh Bagan
hughb.itch.io
& Aiden Collins-Cruickshank
aidencc.itch.io

1-Bit Pack, Input Prompts, and Game Icons
    by www.kenney.nl
Gothic Pixels font by akezhar.itch.io
DungeonFont by vrtxrry.itch.io

Made proudly in Godot Engine 3.5
"

[node name="HBoxContainer" type="HBoxContainer" parent="Credits/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BackButton" type="TextureButton" parent="Credits/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("8")

[node name="RedRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.145098, 0, 0, 0)

[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Credits/MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
